# falcon-compression

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
falcon_compression/: __init__.py  brotli.py  gzip.py  middleware.py  util.py
tests/: data.py  test_falcon_compression.py
