[tool.poetry]
name = "falcon-compression"
version = "0.1.0"
description = ""
authors = ["Will Newton <will.newton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Brotli = "^1.0.9"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
falcon = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
