[tool.poetry]
name = "falcon-compression"
version = "0.2.1"
description = "Compression middleware for Falcon"
authors = ["Will Newton <will.newton@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/willnewton/falcon-compression"
repository = "https://github.com/willnewton/falcon-compression"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
Brotli = "^1.0.9"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
falcon = "^3.1.0"
pytest-benchmark = "^3.4.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
